# auction

./: .env.example  .gitignore  Dockerfile  pyproject.toml  pytest.ini  render.yaml  requirements.txt  vercel.json
.claude/skills/: monkey-test.md
.github/workflows/: ci.yml  deploy.yml  scrape.yml
api/: index.py
app/: config.py  dependencies.py  main.py
app/api/: auth.py  contracts.py  dashboard.py  esg.py  financial.py  investor_reports.py  invoices.py  lease_contracts.py  liquidation.py  ltv.py  market_prices.py  masters.py  pages.py  pricing.py  privacy.py  proposals.py  simulation.py  telemetry.py  value_transfer.py  vehicle_nav.py  yayoi.py
app/core/: acquisition_price.py  contract_generator.py  esg_scorer.py  finance_llm_extractor.py  financial_analyzer.py  http.py  integrated_pricing.py  investor_report_generator.py  lease_contract_importer.py  lease_price.py  ltv_valuator.py  market_analysis.py  market_data_importer.py  nav_calculator.py  nlv_router.py  pdf_generator.py  pdf_text_extractor.py  pricing.py  pricing_constants.py  proposal_generator.py  residual_value.py  residual_value_v2.py  scheduler.py  value_transfer.py
app/db/: supabase_client.py
app/middleware/: csrf.py  metrics.py  plan_gate.py  rate_limit.py  rbac.py
app/models/: __init__.py  common.py  esg.py  financial.py  investor_report.py  invoice.py  liquidation.py  ltv.py  master.py  pricing.py  privacy.py  simulation.py  stakeholder.py  telemetry.py  user_plan.py  value_transfer.py  vehicle.py  vehicle_inventory.py
app/services/: email_service.py  esg_service.py  yayoi_service.py
config/: scraper_config.yaml
docs/: CVLPOS_開発提案書_API連携_スクレイピング拡張.pptx  api_audit_report.md  calculation_audit.md  case_studies.html  change_request_v2.md  current_system_spec.md  db_audit_report.md  demo_scenarios.md  fee_breakdown.html  finance_assessment_design.md  flow.html  fund_scheme_v2.html  gap_analysis_carchs.md  global_liquidation_spec.md  improvement_backlog.md  integrated_specification_v3.md  investor_dashboard_spec.md  ltv_valuation_spec.md  matsu_take_ume_plans.html  nav_comparison.html  onboarding_flow.html  pirce.html  proposal_index.html  simulation_contract_usage.md  software_specification_v2.md  specification.md  telemetry_roadmap.md  ui_audit_report.md  uiux_migration_spec.md  value_transfer_engine_spec.md
scraper/: base.py  scheduler.py  utils.py
scripts/: create_contract_templates.py  export_report.py  qa_e2e_test.py  run_scraper.py  seed_data.py
tests/: conftest.py
(+180 files in other folders)
